# google_calendar_api_tutorial_back

./: .gitignore  credentials.json  pyproject.toml
calendar_widget_fastapi/: main.py
